--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -52,7 +52,7 @@
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
     "# Define time period to export\n",
-    "start_date = datetime.datetime(1980, 1, 1)\n",
+    "start_date = datetime.datetime(2022, 1, 1)\n",
     "end_date = datetime.datetime(2024, 1, 1)\n",
     "\n",
     "\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -189,91 +189,123 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmetdrought-shorttermdroughtblend\",\n",
-      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmetdrought-shorttermdroughtblend\",\n",
+      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
+      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-06-14T15:24:09.893079Z\"\n",
+      "  \"updateTime\": \"2023-06-14T18:50:29.249267Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmetdrought-shorttermdroughtblend\",\n",
-      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmetdrought-shorttermdroughtblend\",\n",
+      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
+      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-06-14T15:24:09.893079Z\"\n",
+      "  \"updateTime\": \"2023-06-14T18:50:29.249267Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 1980-01-01 00:00:00 - 1981-01-01 00:00:00\n",
-      "Running  1980-01-04 23:00:00\n",
-      "Running  1980-01-09 23:00:00\n",
-      "Running  1980-01-14 23:00:00\n",
-      "Running  1980-01-19 23:00:00\n",
-      "Running  1980-01-24 23:00:00\n",
-      "Running  1980-01-29 23:00:00\n",
-      "Running  1980-02-03 23:00:00\n",
-      "Running  1980-02-08 23:00:00\n",
-      "Running  1980-02-13 23:00:00\n",
-      "Running  1980-02-18 23:00:00\n",
-      "Running  1980-02-23 23:00:00\n",
-      "Running  1980-02-28 23:00:00\n",
-      "Running  1980-03-04 23:00:00\n",
-      "Running  1980-03-09 23:00:00\n",
-      "Running  1980-03-14 23:00:00\n",
-      "Running  1980-03-19 23:00:00\n",
-      "Running  1980-03-24 23:00:00\n",
-      "Running  1980-03-29 23:00:00\n",
-      "Running  1980-04-03 23:00:00\n",
-      "Running  1980-04-08 23:00:00\n",
-      "Running  1980-04-13 23:00:00\n",
-      "Running  1980-04-18 23:00:00\n",
-      "Running  1980-04-23 23:00:00\n",
-      "Running  1980-04-29 00:00:00\n",
-      "Running  1980-05-04 00:00:00\n",
-      "Running  1980-05-09 00:00:00\n",
-      "Running  1980-05-14 00:00:00\n",
-      "Running  1980-05-19 00:00:00\n",
-      "Running  1980-05-24 00:00:00\n",
-      "Running  1980-05-29 00:00:00\n",
-      "Running  1980-06-03 00:00:00\n",
-      "Running  1980-06-08 00:00:00\n",
-      "Running  1980-06-13 00:00:00\n",
-      "Running  1980-06-18 00:00:00\n",
-      "Running  1980-06-23 00:00:00\n",
-      "Running  1980-06-28 00:00:00\n",
-      "Running  1980-07-03 00:00:00\n",
-      "Running  1980-07-08 00:00:00\n",
-      "Running  1980-07-13 00:00:00\n",
-      "Running  1980-07-18 00:00:00\n",
-      "Running  1980-07-23 00:00:00\n",
-      "Running  1980-07-28 00:00:00\n",
-      "Running  1980-08-02 00:00:00\n",
-      "Running  1980-08-07 00:00:00\n",
-      "Running  1980-08-12 00:00:00\n",
-      "Running  1980-08-17 00:00:00\n",
-      "Running  1980-08-22 00:00:00\n",
-      "Running  1980-08-27 00:00:00\n",
-      "Running  1980-09-01 00:00:00\n",
-      "Running  1980-09-06 00:00:00\n",
-      "Running  1980-09-11 00:00:00\n",
-      "Running  1980-09-16 00:00:00\n",
-      "Running  1980-09-21 00:00:00\n",
-      "Running  1980-09-26 00:00:00\n",
-      "Running  1980-10-01 00:00:00\n",
-      "Running  1980-10-06 00:00:00\n",
-      "Running  1980-10-11 00:00:00\n",
-      "Running  1980-10-16 00:00:00\n",
-      "Running  1980-10-21 00:00:00\n",
-      "Running  1980-10-26 00:00:00\n",
-      "Running  1980-10-30 23:00:00\n",
-      "Running  1980-11-04 23:00:00\n",
-      "Running  1980-11-09 23:00:00\n",
-      "Running  1980-11-14 23:00:00\n",
-      "Running  1980-11-19 23:00:00\n",
-      "Running  1980-11-24 23:00:00\n",
-      "Running  1980-11-29 23:00:00\n",
-      "Running  1980-12-04 23:00:00\n",
-      "Running  1980-12-09 23:00:00\n",
-      "Running  1980-12-14 23:00:00\n",
-      "Running  1980-12-19 23:00:00\n",
-      "Running  1980-12-24 23:00:00\n",
-      "Running  1980-12-29 23:00:00\n"
+      "Appending to Image Collection for dates 2022-01-01 00:00:00 - 2024-01-01 00:00:00\n",
+      "Running  2022-01-04 23:00:00\n",
+      "Running  2022-01-09 23:00:00\n",
+      "Running  2022-01-14 23:00:00\n",
+      "Running  2022-01-19 23:00:00\n",
+      "Running  2022-01-24 23:00:00\n",
+      "Running  2022-01-29 23:00:00\n",
+      "Running  2022-02-03 23:00:00\n",
+      "Running  2022-02-08 23:00:00\n",
+      "Running  2022-02-13 23:00:00\n",
+      "Running  2022-02-18 23:00:00\n",
+      "Running  2022-02-23 23:00:00\n",
+      "Running  2022-02-28 23:00:00\n",
+      "Running  2022-03-05 23:00:00\n",
+      "Running  2022-03-10 23:00:00\n",
+      "Running  2022-03-16 00:00:00\n",
+      "Running  2022-03-21 00:00:00\n",
+      "Running  2022-03-26 00:00:00\n",
+      "Running  2022-03-31 00:00:00\n",
+      "Running  2022-04-05 00:00:00\n",
+      "Running  2022-04-10 00:00:00\n",
+      "Running  2022-04-15 00:00:00\n",
+      "Running  2022-04-20 00:00:00\n",
+      "Running  2022-04-25 00:00:00\n",
+      "Running  2022-04-30 00:00:00\n",
+      "Running  2022-05-05 00:00:00\n",
+      "Running  2022-05-10 00:00:00\n",
+      "Running  2022-05-15 00:00:00\n",
+      "Running  2022-05-20 00:00:00\n",
+      "Running  2022-05-25 00:00:00\n",
+      "Running  2022-05-30 00:00:00\n",
+      "Running  2022-06-04 00:00:00\n",
+      "Running  2022-06-09 00:00:00\n",
+      "Running  2022-06-14 00:00:00\n",
+      "Running  2022-06-19 00:00:00\n",
+      "Running  2022-06-24 00:00:00\n",
+      "Running  2022-06-29 00:00:00\n",
+      "Running  2022-07-04 00:00:00\n",
+      "Running  2022-07-09 00:00:00\n",
+      "Running  2022-07-14 00:00:00\n",
+      "Running  2022-07-19 00:00:00\n",
+      "Running  2022-07-24 00:00:00\n",
+      "Running  2022-07-29 00:00:00\n",
+      "Running  2022-08-03 00:00:00\n",
+      "Running  2022-08-08 00:00:00\n",
+      "Running  2022-08-13 00:00:00\n",
+      "Running  2022-08-18 00:00:00\n",
+      "Running  2022-08-23 00:00:00\n",
+      "Running  2022-08-28 00:00:00\n",
+      "Running  2022-09-02 00:00:00\n",
+      "Running  2022-09-07 00:00:00\n",
+      "Running  2022-09-12 00:00:00\n",
+      "Running  2022-09-17 00:00:00\n",
+      "Running  2022-09-22 00:00:00\n",
+      "Running  2022-09-27 00:00:00\n",
+      "Running  2022-10-02 00:00:00\n",
+      "Running  2022-10-07 00:00:00\n",
+      "Running  2022-10-12 00:00:00\n",
+      "Running  2022-10-17 00:00:00\n",
+      "Running  2022-10-22 00:00:00\n",
+      "Running  2022-10-27 00:00:00\n",
+      "Running  2022-11-01 00:00:00\n",
+      "Running  2022-11-06 00:00:00\n",
+      "Running  2022-11-10 23:00:00\n",
+      "Running  2022-11-15 23:00:00\n",
+      "Running  2022-11-20 23:00:00\n",
+      "Running  2022-11-25 23:00:00\n",
+      "Running  2022-11-30 23:00:00\n",
+      "Running  2022-12-05 23:00:00\n",
+      "Running  2022-12-10 23:00:00\n",
+      "Running  2022-12-15 23:00:00\n",
+      "Running  2022-12-20 23:00:00\n",
+      "Running  2022-12-25 23:00:00\n",
+      "Running  2022-12-30 23:00:00\n",
+      "Running  2023-01-04 23:00:00\n",
+      "Running  2023-01-09 23:00:00\n",
+      "Running  2023-01-14 23:00:00\n",
+      "Running  2023-01-19 23:00:00\n",
+      "Running  2023-01-24 23:00:00\n",
+      "Running  2023-01-29 23:00:00\n",
+      "Running  2023-02-03 23:00:00\n",
+      "Running  2023-02-08 23:00:00\n",
+      "Running  2023-02-13 23:00:00\n",
+      "Running  2023-02-18 23:00:00\n",
+      "Running  2023-02-23 23:00:00\n",
+      "Running  2023-02-28 23:00:00\n",
+      "Running  2023-03-05 23:00:00\n",
+      "Running  2023-03-10 23:00:00\n",
+      "Running  2023-03-16 00:00:00\n",
+      "Running  2023-03-21 00:00:00\n",
+      "Running  2023-03-26 00:00:00\n",
+      "Running  2023-03-31 00:00:00\n",
+      "Running  2023-04-05 00:00:00\n",
+      "Running  2023-04-10 00:00:00\n",
+      "Running  2023-04-15 00:00:00\n",
+      "Running  2023-04-20 00:00:00\n",
+      "Running  2023-04-25 00:00:00\n",
+      "Running  2023-04-30 00:00:00\n",
+      "Running  2023-05-05 00:00:00\n",
+      "Running  2023-05-10 00:00:00\n",
+      "Running  2023-05-15 00:00:00\n",
+      "Running  2023-05-20 00:00:00\n",
+      "Running  2023-05-25 00:00:00\n",
+      "Running  2023-05-30 00:00:00\n",
+      "Running  2023-06-04 00:00:00\n",
+      "Running  2023-06-09 00:00:00\n"
      ]
     }
    ],
@@ -310,7 +342,6 @@
     "        maxPixels = 1e13)\n",
     "    task.start()\n",
     "\n",
-    "    \n",
     "# If there is an Image Collection asset at the out_path export time-series images\n",
     "elif os.system(f\"earthengine asset info {out_path}\") == 0:\n",
     "\n",
@@ -423,26 +454,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[315900000000, 316332000000, 316764000000, 317196000000, 317628000000, 318060000000, 318492000000, 318924000000, 319356000000, 319788000000, 320220000000, 320652000000, 321084000000, 321516000000, 321948000000, 322380000000, 322812000000, 323244000000, 323676000000, 324108000000, 324540000000, 324972000000, 325404000000, 325836000000, 326268000000, 326700000000, 327132000000, 327564000000, 327996000000, 328428000000, 328860000000, 329292000000, 329724000000, 330156000000, 330588000000, 331020000000, 331452000000, 331884000000, 332316000000, 332748000000, 333180000000, 333612000000, 334044000000, 334476000000, 334908000000, 335340000000, 335772000000, 336204000000, 336636000000, 337068000000, 337500000000, 337932000000, 338364000000, 338796000000, 339228000000, 339660000000, 340092000000, 340524000000, 340956000000, 341388000000, 341820000000, 342252000000, 342684000000, 343116000000, 343548000000, 343980000000, 344412000000, 344844000000, 345276000000, 345708000000, 346140000000, 346572000000, 347004000000]\n",
-      "[315900000000, 316332000000, 316764000000, 317196000000, 317628000000, 318060000000, 318492000000, 318924000000, 319356000000, 319788000000, 320220000000, 320652000000, 321084000000, 321516000000, 321948000000, 322380000000, 322812000000, 323244000000, 323676000000, 324108000000, 324540000000, 324972000000, 325404000000, 325836000000, 326268000000, 326700000000, 327132000000, 327564000000, 327996000000, 328428000000, 328860000000, 329292000000, 329724000000, 330156000000, 330588000000, 331020000000, 331452000000, 331884000000, 332316000000, 332748000000, 333180000000, 333612000000, 334044000000, 334476000000, 334908000000, 335340000000, 335772000000, 336204000000, 336636000000, 337068000000, 337500000000, 337932000000, 338364000000, 338796000000, 339228000000, 339660000000, 340092000000, 340524000000, 340956000000, 341388000000, 341820000000, 342252000000, 342684000000, 343116000000, 343548000000, 343980000000, 344412000000, 344844000000, 345276000000, 345708000000, 346140000000, 346572000000, 347004000000]\n"
+      "These dates are missing and will be rerun  {434354400000, 433058400000, 434786400000, 433922400000, 372578400000}\n",
+      "Running  1983-10-07 00:00:00\n",
+      "Running  1983-09-22 00:00:00\n",
+      "Running  1983-10-12 00:00:00\n",
+      "Running  1983-10-02 00:00:00\n",
+      "Running  1981-10-22 00:00:00\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "set()"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -452,8 +477,105 @@
     "# Get list of dates from collection\n",
     "coll_dates = ee.ImageCollection(out_path).aggregate_array('system:time_start').distinct().getInfo()\n",
     "\n",
+    "# Get last date -- this is temporary while developing code\n",
+    "max_date = max(coll_dates)\n",
+    "all_dates = [i for i in all_dates if i <= max_date]\n",
+    "\n",
     "# Get list of dates missing from collection\n",
-    "set(all_dates) - set(coll_dates)\n"
+    "miss_dates = set(all_dates) - set(coll_dates)\n",
+    "print(\"These dates are missing and will be rerun \", miss_dates)\n",
+    "\n",
+    "for date in miss_dates:\n",
+    "    print(\"Running \", datetime.datetime.fromtimestamp(date/1000.0))\n",
+    "    \n",
+    "    date_ymd = datetime.datetime.fromtimestamp(date/1000.0).strftime('%Y%m%d')\n",
+    "\n",
+    "    if in_ic_paths == ['GRIDMET/DROUGHT']:\n",
+    "\n",
+    "        # Run function to pre-process the GridMET drought data\n",
+    "        in_i = eedb_col.preprocess_gm_drought(in_ic_paths, var_name, date)\n",
+    "  \n",
+    "    elif in_ic_paths == ['IDAHO_EPSCOR/GRIDMET']:\n",
+    "\n",
+    "        # Run function to pre-process the GridMET data\n",
+    "        in_i = eedb_col.preprocess_gm(in_ic_paths, var_name, date)\n",
+    "\n",
+    "    elif in_ic_paths == ['projects/rap-data-365417/assets/vegetation-cover-v3'] or in_ic_paths == ['projects/rap-data-365417/assets/npp-partitioned-v3'] or in_ic_paths == ['projects/rap-data-365417/assets/npp-partitioned-16day-v3']:\n",
+    "\n",
+    "        # Run function to pre-process the RAP data\n",
+    "        in_i = eedb_col.preprocess_rap(in_ic_paths, var_name, date)\n",
+    "\n",
+    "    elif in_ic_paths == ['projects/climate-engine/usdm/weekly']:\n",
+    "\n",
+    "        # Run function to pre-process the USDM data\n",
+    "        in_i = eedb_col.preprocess_usdm(in_ic_paths, var_name, date)\n",
+    "\n",
+    "    elif in_ic_paths == ['MODIS/061/MOD11A2']:\n",
+    "\n",
+    "        # Run function to pre-process the MODIS LST data\n",
+    "        in_i = eedb_col.preprocess_modlst(in_ic_paths, var_name, date)\n",
+    "\n",
+    "    elif in_ic_paths == ['LANDSAT/LT05/C02/T1_L2', 'LANDSAT/LE07/C02/T1_L2', 'LANDSAT/LC08/C02/T1_L2', 'LANDSAT/LC09/C02/T1_L2']:\n",
+    "\n",
+    "        # Run function to pre-process the Landsat SR NDVI data\n",
+    "        in_i = eedb_col.preprocess_lsndvi(in_ic_paths, var_name, date, in_fc)\n",
+    "\n",
+    "    elif in_ic_paths == ['MODIS/006/MOD16A2']:\n",
+    "\n",
+    "        # Run function to pre-process the MODIS ET data\n",
+    "        in_i = eedb_col.preprocess_modet(in_ic_paths, var_name, date)\n",
+    "\n",
+    "    elif in_ic_paths == ['projects/climate-engine-pro/assets/mtbs_mosaics_annual']:\n",
+    "\n",
+    "        # Run function to pre-process the MTBS data\n",
+    "        in_i = eedb_col.preprocess_mtbs(in_ic_paths, var_name, date)\n",
+    "\n",
+    "\n",
+    "    # ---------------------------- Apply functions to output image ---------------------------------\n",
+    "\n",
+    "    # Conditionally apply mask to images\n",
+    "    if mask == True:\n",
+    "\n",
+    "        # Select date band for single date\n",
+    "        in_i = in_i.updateMask(ee.Image(mask_path))\n",
+    "\n",
+    "    elif mask == False:\n",
+    "\n",
+    "        # Select date band for single date\n",
+    "        in_i = in_i\n",
+    "\n",
+    "    # Create dictionary of properties        \n",
+    "    properties = {'system:index': date_ymd, 'system:time_start': date, 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path,\\\n",
+    "                      'in_fc_id': in_fc_id, 'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type,\\\n",
+    "                      'var_name': var_name, 'var_units': var_units, 'mask': mask}\n",
+    "        \n",
+    "    # Conditionally add mask path to properties\n",
+    "    if mask == True:\n",
+    "        properties['mask_path'] = mask_path\n",
+    "    elif mask == False:\n",
+    "        properties['mask_path'] = 'None'\n",
+    "\n",
+    "    if var_type == 'Continuous':\n",
+    "\n",
+    "        # Run function to get time-series statistics for input feature collection\n",
+    "        out_fc = eedb_cor.img_to_pts_continuous(in_i, in_fc)\n",
+    "\n",
+    "        # Convert centroid time-series to image collection time-series\n",
+    "        out_i = eedb_cor.pts_to_img_continuous(in_fc = out_fc)\n",
+    "\n",
+    "    elif var_type == 'Categorical':\n",
+    "\n",
+    "        # Run function to get time-series statistics for input feature collection for continuous variables\n",
+    "        out_fc = eedb_cor.img_to_pts_categorical(in_i, in_fc, in_ic_name = in_ic_name)\n",
+    "\n",
+    "        # Convert centroid time-series to image collection time-series\n",
+    "        out_i = eedb_cor.pts_to_img_categorical(in_fc = out_fc, in_ic_name = in_ic_name)\n",
+    "\n",
+    "    # Create out region for export\n",
+    "    out_region = out_fc.geometry().buffer(20)\n",
+    "\n",
+    "    # Export the image\n",
+    "    eedb_cor.export_img(out_i = out_i, out_region = out_region, out_path = out_path, out_id = date_ymd, properties = properties)"
    ]
   }
  ],
